[package]
name = "isucon9-rust"
version = "0.1.0"
authors = ["Yusuke Tanaka <yusuktan@maguro.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
anyhow = "1.0.32"
sqlx = { version = "0.3.5", default-features = false, features = [ "runtime-async-std", "mysql" ] }
async-std = { version = "1.6.2", features = ["attributes"] }
tide = "0.13.0"
